--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.3",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "ejs": "^2.6.1",
